ecmascript/parser/tests/typescript-errors/tsc/externalModules/invalidSyntaxNamespaceImportWithSystem/input.ts.stderr
error: Expected as, got from
 --> $DIR/tests/typescript-errors/tsc/externalModules/invalidSyntaxNamespaceImportWithSystem/input.ts:6:10
  |
6 | import * from Zero from "./0"
  |          ^^^^

